# ticket-triage

./: .gitignore  Cargo.toml  LICENSE  README.md
src/: error.rs  lib.rs  main.rs  pipeline.rs  ticket.rs  ticket_store.rs
src/processors/: classification.rs  language.rs  mod.rs  priority.rs  sentiment.rs
